<resources>
    <string name="app_name">Calculator App</string>
    <string name="edit_text_hint">enter number</string>

    <string name="button_zero_text">0</string>
    <string name="button_one_text">1</string>
    <string name="button_two_text">2</string>
    <string name="button_three_text">3</string>
    <string name="button_four_text">4</string>
    <string name="button_five_text">5</string>
    <string name="button_six_text">6</string>
    <string name="button_seven_text">7</string>
    <string name="button_eight_text">8</string>
    <string name="button_nine_text">9</string>

    <string name="button_dot_text">.</string>

    <string name="button_sum_text">+</string>
    <string name="button_minus_text">-</string>
    <string name="button_clear_text">c</string>
    <string name="button_divide_text">/</string>
    <string name="button_equal_text">=</string>
</resources>