<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_sixteen"
        android:background="@drawable/edit_text_border"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/padding_eight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_one_text" />

            <Button
                android:id="@+id/button_two"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_two_text" />

            <Button
                android:id="@+id/button_three"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_three_text" />

            <Button
                android:id="@+id/button_divide"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:layout_marginRight="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_divide_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_four"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_four_text" />

            <Button
                android:id="@+id/button_five"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_five_text" />

            <Button
                android:id="@+id/button_six"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_six_text" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:layout_marginRight="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_minus_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_seven"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_seven_text" />

            <Button
                android:id="@+id/button_eight"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_eight_text" />

            <Button
                android:id="@+id/button_nine"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_nine_text" />

            <Button
                android:id="@+id/button_plus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:layout_marginRight="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_sum_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_clear"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_clear_text" />

            <Button
                android:id="@+id/button_zero"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_zero_text" />

            <Button
                android:id="@+id/button_dot"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_dot_text" />

            <Button
                android:id="@+id/button_equal"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:layout_marginRight="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_equal_text" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>